# aws-lambda-layer-packing

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  aws_profile.sh  lambda_function.py  lambda_versions.py  layer_builds.sh  layer_create_zip.sh  layer_publish.sh  layer_test.sh  pyproject.toml  requirements.dev  tasks.py
deprecated/: package_lambda_layers.sh  package_lambda_layers_01.sh  package_lambda_layers_02.sh
dockerfiles/: README.md  base.Dockerfile  test.Dockerfile  test_venv.Dockerfile
lambda_project/: __init__.py  check_imports.py  lambda_versions.py  logger.py
patches/shapely/: geos.patch
tests/: test_lambda_project.py
